git client modified

--- a/prototype/public/index.html
+++ b/prototype/public/index.html
@@ -4,14 +4,10 @@
 
 <h1>Welcome</h1>
 <p>This is SimpleAsset Service</p>
-<button type="button">
-<a href="/create.html">Create Asset</a>
-</button>
+<a href="create.html">Create Asset</a>
 <br>
 <br>
-<a href="/query.html">Query Asset</a>
-
-<button type="button">Query</button>
+<a href="query.html">Query Asset</a>
 </body>
 </html>
 
